//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  phone String [not null]
  email String [unique, not null]
  role Role [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  password String [not null]
  isVerified Boolean [not null, default: false]
  profilePictureUrl String
  receivedMessages Message [not null]
  sentMessages Message [not null]
  customerRequests Request [not null]
  ratingsReceived Review [not null]
  ratingsGiven Review [not null]
  technicianProfile TechnicianProfile
  TechnicianVerification TechnicianVerification
}

Table TechnicianProfile {
  userId String [pk]
  servicesProvided ServiceType[] [not null]
  businessName String [not null]
  businessRegistered Boolean [not null]
  incorpNumber String
  websiteLink String [not null]
  socialMediaLink String[] [not null]
  bio String [not null]
  isVerifiedTechnician Boolean [not null]
  verificationStatus VerificationStatus [not null, default: 'PENDING']
  offers Offer [not null]
  portfolio PortfolioItem [not null]
  requestsTaken Request [not null]
  technicianAddress TechnicianAddress
  user User [not null]
}

Table TechnicianVerification {
  id String [pk]
  technicianId String [unique, not null]
  idFrontUrl String [not null]
  idBackUrl String [not null]
  selfieUrl String [not null]
  status VerificationStatus [not null, default: 'PENDING']
  verifiedAt DateTime
  verifiedBy String
  rejectionReason String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  technician User [not null]
}

Table VerificationToken {
  code String [pk]
  email String [not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  type VerificationType
}

Table Request {
  id String [pk]
  pictures String[] [not null]
  jobDescription String [not null]
  budget Int [not null]
  shoeSize Float [not null]
  brand String [not null]
  shoeName String [not null]
  releaseYear Int [not null]
  previouslyWorkedWith String [not null]
  service ServiceType [not null]
  subtypes String[] [not null]
  requestStatus RequestStatus [not null, default: 'BOOKED']
  shippingLabelUrl String
  trackingNumber String
  shippingStatus ShippingStatus [not null, default: 'PENDING_LABEL']
  shippingCarrier String
  customerId String [not null]
  technicianId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  city String [not null]
  stateCode String [not null]
  street String [not null]
  zipCode String [not null]
  offers Offer [not null]
  customer User [not null]
  technician TechnicianProfile
  review Review
}

Table Offer {
  id String [pk]
  amount Float [not null]
  description String [not null]
  status OfferStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  attempts Int [not null, default: 1]
  technicianId String [not null]
  requestId String [not null]
  shippingEstimate Float [not null]
  estimatedTime Int [not null]
  request Request [not null]
  technician TechnicianProfile [not null]
}

Table TechnicianAddress {
  id String [pk]
  street String [not null]
  city String [not null]
  stateCode String [not null]
  zipCode String [not null]
  technicianProfileId String [unique, not null]
  technicianProfile TechnicianProfile [not null]
}

Table Review {
  id String [pk]
  rating Int [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  reviewerId String [not null]
  revieweeId String [not null]
  requestId String [unique, not null]
  request Request [not null]
  reviewee User [not null]
  reviewer User [not null]
}

Table PortfolioItem {
  id String [pk]
  title String [not null]
  description String [not null]
  images String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  technicianId String [not null]
  technician TechnicianProfile [not null]
}

Table Message {
  id String [pk]
  senderId String [not null]
  receiverId String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  receiver User [not null]
  sender User [not null]
}

Enum Role {
  CUSTOMER
  TECHNICIAN
  ADMIN
}

Enum VerificationStatus {
  PENDING
  APPROVED
  REJECTED
}

Enum VerificationType {
  EMAIL_VERIFICATION
  PASSWORD_RESET
}

Enum ServiceType {
  CLEANING
  CUSTOM
  RESTORATION
}

Enum CleaningSubtype {
  LIGHT_CLEAN
  DEEP_CLEAN
  STAIN_REMOVAL
  DEODORIZATION
  DEOXIDIZE_NETTING
  DEOXIDIZE_RUBBER_SOLES
  DESIGNER_SHOE_CLEAN
  ICE_CLEAR_SOLES
  SUEDE_NUBUCK_CLEAN
  UPPER_REPAINT
  OTHER
}

Enum CustomSubtype {
  DYE
  NEO_VINTAGE
  PAINT
  OTHER
}

Enum RestorationSubtype {
  BACK_TABS_SWAP
  CLEAN_BEFORE_RESTORING
  GLUE_TOUCH_UP
  ICE_CLEAR_SOLES
  MIDSOLE_REPAINT
  PAINT_TOUCH_UP
  REGLUE
  REPLACE_NETTING
  REPLACE_WINGS
  SOLE_SWAPS_WITH_DONOR_SOLES
  SOLE_SWAPS_WITHOUT_DONOR_SOLES
  SUEDE_NUBUCK_REDYE
  UPPER_REPAINT
  OTHER
}

Enum RequestType {
  STANDARD
  RUSH
  BULK
}

Enum RequestStatus {
  BOOKED
  IN_PROGRESS
  COMPLETE
}

Enum OfferStatus {
  PENDING
  ACCEPTED
  DECLINED
  EXPIRED
}

Enum ShippingStatus {
  PENDING_LABEL
  LABEL_GENERATED
  IN_TRANSIT
  DELIVERED
  RETURNED
}

Ref: TechnicianProfile.userId - User.id

Ref: TechnicianVerification.technicianId - User.id

Ref: Request.customerId > User.id

Ref: Request.technicianId > TechnicianProfile.userId

Ref: Offer.requestId > Request.id

Ref: Offer.technicianId > TechnicianProfile.userId

Ref: TechnicianAddress.technicianProfileId - TechnicianProfile.userId

Ref: Review.requestId - Request.id

Ref: Review.revieweeId > User.id

Ref: Review.reviewerId > User.id

Ref: PortfolioItem.technicianId > TechnicianProfile.userId

Ref: Message.receiverId > User.id

Ref: Message.senderId > User.id